--- a/.forceignore
+++ b/.forceignore
@@ -10,3 +10,8 @@ package.xml
 
 # LWC Jest
 **/__tests__/**
+
+/force-app/main/default/wave/**/*
+/force-app/main/default/AdvAccountForecastSet
+/force-app/main/default/batchCalcJobDefinitions
+/force-app/main/default/contentassets
